--- a/10-column-preview-card/style.css
+++ b/10-column-preview-card/style.css
@@ -44,6 +44,18 @@ button {
   transition: all 0.2s ease-in;
 }
 
+.sr-only {
+  position: absolute;
+  width:1px;
+  height:1px;
+  padding:0;
+  margin:-1px;
+  overflow:hidden;
+  clip:rect(0,0,0,0);
+  white-space:nowrap;
+  border:0;
+}
+
 /* Cards */
 .cards {
   display: flex;
