--- a/11-pod-request-access/style.css
+++ b/11-pod-request-access/style.css
@@ -143,7 +143,7 @@ body {
   .hero__card {
     width: 680px;
 
-    width:600px;
+    width: 600px;
     margin-top: 7rem;
   }
 
@@ -157,7 +157,7 @@ body {
     padding: 3rem 0 13rem 5rem;
   }
   .hero__pattern {
-    display:none;
+    display: none;
   }
   picture .hero__image {
     position: absolute;
@@ -167,9 +167,87 @@ body {
     width: 60%;
   }
   .card__text {
-    width:80%;
+    width: 80%;
   }
   .card__logos {
-    padding-right:5rem;
+    padding-right: 5rem;
   }
+}
+
+@media (max-width: 750px) {
+  picture .hero__image {
+    width: 100%;
+    height: 100vh;
+    right: 0;
+  }
+  .hero {
+    text-align: center;
+    position: relative;
+
+    padding: 0;
+    margin: 0;
+    margin-top: 6rem;
+  }
+  .hero::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100vw;
+    height: 100%;
+    background-color: hsla(224, 35%, 11%, 0.9);
+    z-index: -1;
+  }
+  .hero__card {
+    background: none;
+    box-shadow: none;
+    margin: 0;
+    margin-top: 5.7rem;
+
+    width: 100%;
+    padding: 0 2.4rem;
+    display: flex;
+    flex-direction: column;
+  }
+  .card__heading {
+    padding: 0;
+    font-size: 2.6rem;
+    line-height: 1.4;
+    width:70%;
+    max-width:500px;
+    margin-inline: auto;
+  }
+  .card__text {
+    width: 90%;
+    margin: 1.6rem 0 3.5rem;
+    font-size: 1.5rem;
+    margin-inline: auto;
+  }
+  .card__logos {
+    padding-right: 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 6rem;
+    margin: 0 auto;
+  }
+  .form {
+    margin-top: 4.8rem;
+    margin-inline: auto;
+    order: 3;
+    display:flex;
+    flex-direction: column;
+    width:90%;
+  }
+
+  .form__btn {
+    display:block;
+    width:41.5rem;
+    margin:2rem auto;
+    padding: 1.8rem 2.4rem;
+    border-radius: 20px;
+  }
+
 }
