--- a/11-pod-request-access/style.css
+++ b/11-pod-request-access/style.css
@@ -243,6 +243,7 @@ body {
     display:flex;
     flex-direction: column;
     width:90%;
+    z-index:3;
   }
 
   .form__btn {
@@ -251,6 +252,16 @@ body {
     margin:2rem auto;
     padding: 1.8rem 2.4rem;
     border-radius: 25px;
+  }
+
+  .form__error {
+
+    z-index:1;
+    top:-30px;
+
+
+    bottom:20rem;
+
   }
 
 }
