--- a/11-pod-request-access/style.css
+++ b/11-pod-request-access/style.css
@@ -26,17 +26,17 @@ body {
   font-size: 1.8rem;
   font-family: 'Chivo', sans-serif;
   font-weight: light;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 /* Hero */
 .hero {
-  padding: 5rem 0 13rem 16.5rem;
+  padding: 8rem 0 13rem 16.5rem;
 }
 
 .hero__image {
   position: absolute;
-  top: 8rem;
+  top: 12rem;
   right: 0;
   width: 88.8rem;
   height: 58rem;
@@ -46,22 +46,20 @@ body {
 }
 .hero__pattern {
   position: absolute;
-  top: calc(4rem + 58rem);
+  top: calc(9rem + 58rem);
   right: 0;
 }
 
 .hero__card {
-  width: 700px;
-
+  width: 720px;
   background: var(--dark-black);
   box-shadow: 0px 0px 5px 5px hsla(157, 74%, 62%, 0.8);
-  margin-top: 5rem;
+  margin-top: 14rem;
   padding: 0 0 2rem 2rem;
 }
 
 .card__heading {
   font-weight: 100;
-
   padding: 5rem 5.8rem 2.4rem 0;
   font-size: clamp(2.6rem, 3.5rem + 1vw, 5.2rem);
   line-height: 1.2;
@@ -137,22 +135,6 @@ body {
   justify-content: space-between;
 }
 
-@media (max-width: 1250px) {
-  .hero {
-    padding: 5rem 0 13rem 5rem;
-  }
-  .hero__card {
-    width: 680px;
-
-    width: 600px;
-    margin-top: 7rem;
-  }
-
-  .card__heading {
-    padding: 5rem 1rem 2.4rem 0;
-  }
-}
-
 @media (max-width: 1050px) {
   .hero {
     padding: 3rem 0 13rem 5rem;
@@ -167,18 +149,25 @@ body {
     right: -20px;
     width: 60%;
   }
+  .card__heading {
+    padding: 5rem 3rem 2.4rem 0;
+    font-size: 40px;
+  }
   .card__text {
     width: 80%;
   }
   .card__logos {
     padding-right: 5rem;
   }
+  .hero__card {
+    width: 560px;
+  }
 }
 
 @media (max-width: 750px) {
   picture .hero__image {
     width: 100%;
-    height: 100vh;
+
     right: 0;
   }
   .hero {
@@ -216,8 +205,8 @@ body {
     padding: 0;
     font-size: 2.6rem;
     line-height: 1.4;
-    width:70%;
-    max-width:500px;
+    width: 100%;
+    max-width: 500px;
     margin-inline: auto;
   }
   .card__text {
@@ -231,7 +220,7 @@ body {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
-  
+
     row-gap: 5rem;
     column-gap: 8rem;
     margin: 2rem auto;
@@ -240,33 +229,29 @@ body {
     margin-top: 4.8rem;
     margin-inline: auto;
     order: 3;
-    display:flex;
+    display: flex;
     flex-direction: column;
-    width:90%;
-    z-index:3;
+    width: 90%;
+    z-index: 3;
   }
 
   .form__btn {
-    display:block;
-    width:41.5rem;
-    margin:2rem auto;
+    display: block;
+    width: 41.5rem;
+    margin: 2rem auto;
     padding: 1.8rem 2.4rem;
     border-radius: 25px;
   }
 
   .form__error {
+    z-index: 1;
+    top: -30px;
 
-    z-index:1;
-    top:-30px;
-
-
-    bottom:20rem;
-
+    bottom: 20rem;
   }
-
 }
 
-@media(max-width:650px) {
+@media (max-width: 650px) {
   .card__logos {
     margin: 0 auto;
   }
