add style guide and variables

--- a/13-faq-accordion/style.css
+++ b/13-faq-accordion/style.css
@@ -1,3 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+
+:root {
+  /* ## Text ## */
+  --very-dark-blue:hsl(238, 29%, 16%);
+  --soft-red: hsl(14, 88%, 65%);
+
+  /* ## Gradient ## */
+  --soft-violet: hsl(273, 75%, 66%);
+  --soft-blue:hsl(240, 73%, 65%);
+
+  /* ## Neutral ## */
+  --very-dark-grayish-blue: hsl(237, 12%, 33%);
+  --dark-grayish-blue: hsl(240, 6%, 50%);
+
+  /* ## Dividers */
+  --light-grayish-blue:hsl(240, 5%, 91%);
+}
 * {
   padding:0;
   margin:0;
@@ -10,4 +28,7 @@ html {
 
 body {
   background:cyan;
+  font-size: 1.2rem;
+  font-family: 'Kumbh Sans', sans-serif;
+
 }
