--- a/13-faq-accordion/style.css
+++ b/13-faq-accordion/style.css
@@ -45,7 +45,7 @@ body {
   position: relative;
   padding: 1rem 2.4rem 4rem;
 
-  margin:20rem 0 10rem;
+  margin: 20rem 0 10rem;
 }
 
 .faq__img {
@@ -60,21 +60,6 @@ body {
   margin: 10rem 0 3.8rem;
 }
 
-.faq__details {
-  margin: 1rem 0;
-  padding-bottom: 1.5rem;
-  padding: 1rem 0;
-  border-bottom: 1px solid var(--light-grayish-blue);
-}
-
-.faq__details[open] .details__summary {
-  font-weight: bold;
-}
-.details__summary {
-  font-size: 1.3rem;
-  padding-bottom: 1.2rem;
-}
-
 .faq__accordion {
   margin: 1rem 0;
   padding-bottom: 1.5rem;
@@ -85,29 +70,46 @@ body {
 
 .fa-solid {
   position: absolute;
-  color:var(--soft-red);
+  color: var(--soft-red);
   font-weight: bold;
-  font-size:1.5rem;
+  font-size: 1.5rem;
   cursor: pointer;
 }
 
 .fa-angle-up {
-  top: 10px;
+  top: 15px;
   right: 0;
+  display: none;
 }
 .fa-angle-down {
-  top: 10px;
+  top: 15px;
   right: 0;
-  display:none;
+
 }
 .accordion__heading {
   font-size: 1.3rem;
+  margin:0.5rem 0 1rem;
+  font-weight: 400;
+  cursor: pointer;
 }
 
 .accordion__content {
-  margin:1.3rem 0 0.5rem;
+  margin: 1.3rem 0 0.5rem;
   width: 90%;
-  color:var(--very-dark-grayish-blue);
+  color: var(--very-dark-grayish-blue);
   line-height: 1.8rem;
-  
+  display: none;
+}
+
+
+.open {
+  font-weight: bold;
+}
+
+.show {
+  display:block;
+}
+
+.hide {
+  display:none;
 }
