--- a/13-faq-accordion/style.css
+++ b/13-faq-accordion/style.css
@@ -149,10 +149,11 @@ body {
     text-align: left;
   }
   .faq__content {
-    width: 45rem;
+    width: 42rem;
     margin-left: auto;
     padding-right: 9.5rem;
     padding-bottom:1.5rem;
+    padding-top:1rem;
   }
 
   .img--mobile {
