--- a/13-faq-accordion/style.css
+++ b/13-faq-accordion/style.css
@@ -32,7 +32,9 @@ body {
 
   font-family: 'Kumbh Sans', sans-serif;
   min-height: 100vh;
-  margin-top: 14.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* FAQ */
@@ -44,6 +46,8 @@ body {
   position: relative;
   padding: 1rem 2.4rem 4rem;
   margin-inline: auto;
+  margin-bottom: 8rem;
+  margin-top: 15rem;
 }
 
 .faq__img {
@@ -140,9 +144,10 @@ body {
 @media (min-width: 950px) {
   .faq {
     width: 92rem;
-    margin-inline: auto;
+
     /* overflow: hidden; */
     padding: 0 2.4rem 4rem 0;
+    margin: 0 auto;
   }
   .faq__heading {
     margin-top: 6.5rem;
@@ -152,8 +157,8 @@ body {
     width: 42rem;
     margin-left: auto;
     padding-right: 9.5rem;
-    padding-bottom:1.5rem;
-    padding-top:1rem;
+    padding-bottom: 1.5rem;
+    padding-top: 1rem;
   }
 
   .img--mobile {
@@ -168,11 +173,8 @@ body {
 
   .image__container {
     overflow: hidden;
-
     height: 600px;
-    width: 1000px; /* it is only important to be bigger then parent for one image width size */
-
-    /* margin-left:-400px; */
+    width: 1000px;
     position: absolute;
   }
 
@@ -186,7 +188,7 @@ body {
   }
   .pattern--box {
     display: block;
-    top: 240px;
+    top: 255px;
     left: -100px;
     z-index: 100;
   }
