--- a/12-profile-card/style.css
+++ b/12-profile-card/style.css
@@ -20,26 +20,29 @@ html {
 body {
   font-family: 'Kumbh Sans', sans-serif;
   line-height: 1.5;
-  background: var(--dark-cyan);
+
   display: grid;
   place-content: center;
   min-height: 100vh;
   color: var(--very-dark-blue);
   overflow-x: hidden;
+  background: url(./images/bg-pattern-top.svg), url(./images/bg-pattern-bottom.svg);
+  background-position: right 52vw bottom 35vh, left 48vw top 52vh;
+  background-repeat: no-repeat, no-repeat;
+  background-color: hsl(185deg, 75%, 39%);
 }
 
 .sr-only {
   position: absolute;
-  width:1px;
-  height:1px;
-  padding:0;
-  margin:-1px;
-  overflow:hidden;
-  clip:rect(0,0,0,0);
-  white-space:nowrap;
-  border:0;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
-
 
 /* Hero */
 .hero__pattern {
