--- a/14-social-proof/style.css
+++ b/14-social-proof/style.css
@@ -24,10 +24,66 @@ body {
   line-height: 1.5;
   font-size: 1.5rem;
   font-family: 'League Spartan', sans-serif;
-  background:var(--White);
-  
+  background: var(--White);
+  background: url('./images/bg-pattern-top-desktop.svg'), url('./images/bg-pattern-bottom-desktop.svg');
+  background-position: right 58vw bottom 55vh, left 38vw top 11vh;
+  background-repeat: no-repeat, no-repeat;
 }
 
-h1,h2,h3 {
-  color:var(--very-dark-magenta);
+h1,
+h2,
+h3 {
+  color: var(--very-dark-magenta);
+}
+
+main {
+  padding: 11.8rem 16.5rem 10rem;
+}
+/* HERO */
+
+.hero {
+  display: flex;
+}
+
+.hero__heading {
+  font-size: 4.8rem;
+  letter-spacing: -2px;
+  line-height: 4.8rem;
+  width: 50%;
+}
+.hero__text {
+  font-size: 1.9rem;
+  color: var(--dark-grayish-magenta);
+  line-height: 2.5rem;
+  letter-spacing: -0.63px;
+  width: 70%;
+  margin-top: 1.6rem;
+}
+
+.rate__row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: var(--light-grayish-magenta);
+  margin-bottom: 1.6rem;
+  padding: 2rem 4rem 1.5rem 2.5rem;
+  width: 47.5rem;
+  border-radius: 5px;
+}
+.rate__row:nth-child(2) {
+  margin-left:5rem;
+}
+
+.rate__row:nth-child(3) {
+  margin-left:10rem;
+}
+
+.rate__info {
+  font-size: 1.7rem;
+  color: var(--very-dark-magenta);
+  font-weight: bold;
+}
+
+.rate__star {
+  margin-right: 3px;
 }
