--- a/14-social-proof/style.css
+++ b/14-social-proof/style.css
@@ -26,7 +26,7 @@ body {
   font-family: 'League Spartan', sans-serif;
   background: var(--White);
   background: url('./images/bg-pattern-top-desktop.svg'), url('./images/bg-pattern-bottom-desktop.svg');
-  background-position: right 58vw bottom 55vh, left 38vw top 11vh;
+  background-position: right -38vw bottom 127vh, left 38vw top 11vh;
   background-repeat: no-repeat, no-repeat;
 }
 
@@ -37,7 +37,7 @@ h3 {
 }
 
 main {
-  padding: 11.8rem 16.5rem 10rem;
+  padding: 11.8rem 13rem 10rem;
 }
 /* HERO */
 
@@ -46,10 +46,11 @@ main {
 }
 
 .hero__heading {
-  font-size: 4.8rem;
+  /* font-size: 4.8rem; */
+  font-size: clamp(4rem, 2.5rem + 2.5vw, 5.6rem);
   letter-spacing: -2px;
   line-height: 4.8rem;
-  width: 50%;
+  width: 60%;
 }
 .hero__text {
   font-size: 1.9rem;
@@ -67,15 +68,15 @@ main {
   background: var(--light-grayish-magenta);
   margin-bottom: 1.6rem;
   padding: 2rem 4rem 1.5rem 2.5rem;
-  width: 47.5rem;
+  width: 42.5rem;
   border-radius: 5px;
 }
 .rate__row:nth-child(2) {
-  margin-left:5rem;
+  margin-left: 5rem;
 }
 
 .rate__row:nth-child(3) {
-  margin-left:10rem;
+  margin-left: 10rem;
 }
 
 .rate__info {
@@ -86,4 +87,62 @@ main {
 
 .rate__star {
   margin-right: 3px;
+}
+
+@media (max-width: 1350px) {
+  main {
+    padding: 11.8rem 6rem 10rem 8rem;
+  }
+
+  .hero__heading {
+    width: 65%;
+  }
+  .hero__text {
+    width: 75%;
+  }
+
+  .rate__row {
+    padding: 2rem 4rem 1.5rem 2.5rem;
+    width: 40rem;
+  }
+}
+
+@media (max-width: 1150px) {
+  main {
+    padding: 8.2rem 2.4rem 9rem;
+  }
+  .hero {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .hero__heading {
+    width: 70%;
+    margin-inline: auto;
+    line-height: 3.2rem;
+    letter-spacing: -1.43 px;
+    margin-bottom:2rem;
+  }
+  .hero__text {
+    width: 100%;
+    max-width:500px;
+    margin-inline: auto;
+  }
+
+  .hero__rating {
+    margin-top: 3rem;
+  }
+  .rate__row {
+    flex-direction: column;
+    width: 90%;
+    max-width: 500px;
+    margin-inline: auto;
+  }
+  .rate__row:nth-child(2) {
+    margin-inline: auto;
+  }
+
+  .rate__row:nth-child(3) {
+    margin-inline: auto;
+  }
 }
