--- a/14-social-proof/style.css
+++ b/14-social-proof/style.css
@@ -26,7 +26,7 @@ body {
   font-family: 'League Spartan', sans-serif;
   background: var(--White);
   background: url('./images/bg-pattern-top-desktop.svg'), url('./images/bg-pattern-bottom-desktop.svg');
-  background-position: right -38vw bottom 127vh, left 38vw top 11vh;
+  background-position: right -6vw bottom 167vh, left 1vw top 126vh;
   background-repeat: no-repeat, no-repeat;
 }
 
@@ -37,7 +37,7 @@ h3 {
 }
 
 main {
-  padding: 11.8rem 13rem 10rem;
+  padding: 11.8rem 13rem 6rem;
 }
 /* HERO */
 
@@ -57,7 +57,8 @@ main {
   color: var(--dark-grayish-magenta);
   line-height: 2.5rem;
   letter-spacing: -0.63px;
-  width: 70%;
+  width: 60%;
+  padding-right: 2rem;
   margin-top: 1.6rem;
 }
 
@@ -89,6 +90,51 @@ main {
   margin-right: 3px;
 }
 
+/* cards */
+.cards {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.card {
+  background: var(--very-dark-magenta);
+  margin-right: 3rem;
+  color: #fff;
+  padding: 4.3rem 3.2rem 3.2rem;
+  border-radius: 10px;
+}
+.card:nth-child(2) {
+  margin-bottom: -30px;
+}
+.card:nth-child(3) {
+  margin-bottom: -60px;
+}
+.card__content {
+  display: flex;
+  align-items: flex-start;
+}
+.card__img {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  margin-right: 2.3rem;
+}
+.card__name {
+  color: #fff;
+  font-size: 1.7rem;
+}
+.card__verified {
+  color: hsl(334, 80%, 67%);
+  margin-top: -5px;
+}
+
+.card__text {
+  margin-top: 3.1rem;
+  width: 100%;
+}
 @media (max-width: 1350px) {
   main {
     padding: 11.8rem 6rem 10rem 8rem;
@@ -98,12 +144,16 @@ main {
     width: 65%;
   }
   .hero__text {
-    width: 75%;
+    width: 65%;
+    padding-right: 2rem;
   }
 
   .rate__row {
     padding: 2rem 4rem 1.5rem 2.5rem;
     width: 40rem;
+  }
+  .card {
+    padding: 4.3rem 2.5rem 3.2rem;
   }
 }
 
@@ -121,12 +171,13 @@ main {
     margin-inline: auto;
     line-height: 3.2rem;
     letter-spacing: -1.43 px;
-    margin-bottom:2rem;
+    margin-bottom: 2rem;
   }
   .hero__text {
     width: 100%;
-    max-width:500px;
+    max-width: 500px;
     margin-inline: auto;
+    padding-right: 0rem;
   }
 
   .hero__rating {
@@ -144,5 +195,42 @@ main {
 
   .rate__row:nth-child(3) {
     margin-inline: auto;
+  }
+
+  .card:nth-child(2) {
+    margin-bottom: 0px;
+  }
+  .card:nth-child(3) {
+    margin-bottom: 0px;
+  }
+
+  body {
+    line-height: 1.5;
+    font-size: 1.5rem;
+    font-family: 'League Spartan', sans-serif;
+    background: var(--White);
+    background: url('./images/bg-pattern-top-mobile.svg'), url('./images/bg-pattern-bottom-mobile.svg');
+    background-position: right -6vw bottom 167vh, left 1vw top 126vh;
+    background-repeat: no-repeat, no-repeat;
+  }
+}
+
+@media (max-width: 900px) {
+  main {
+    padding: 8.2rem 2.4rem 3rem;
+  }
+  .cards {
+    flex-direction: column;
+  }
+  .card {
+    margin-bottom: 1.6rem;
+    margin-inline: auto;
+    max-width: 700px;
+  }
+  .card:nth-child(2) {
+    margin-bottom: 1.6rem;
+  }
+  .card:nth-child(3) {
+    margin-bottom: 1.6rem;
   }
 }
