--- a/15-article-preview/style.css
+++ b/15-article-preview/style.css
@@ -17,6 +17,131 @@ html {
 }
 
 body {
-  background: #fff;
+  background: var(--light-grayish-blue);
   font-family: 'Manrope', sans-serif;
+  font-size: 1.3rem;
+  line-height: 2rem;
+  display: grid;
+  place-content: center;
+  min-height: 100vh;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.article {
+  width: 73rem;
+  display: flex;
+  background: #fff;
+  border-radius: 10px;
+}
+
+.article__img {
+  width: 28.5rem;
+  height: 28rem;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.article__content {
+  padding: 3.2rem 4rem 3.2rem;
+}
+
+.article__heading {
+  font-size: 2rem;
+  line-height: 2.8rem;
+  color: var(--very-dark-grayish-blue);
+  margin-bottom: 1.2rem;
+  letter-spacing: 0.25px;
+}
+
+.article__text {
+  color: var(--desaturated-dark-blue);
+  letter-spacing: 0.12px;
+}
+
+.article__footer {
+  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+}
+
+.user {
+  display: flex;
+}
+
+.user__img {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  margin-right: 1.6rem;
+}
+
+.user__name {
+  color: var(--very-dark-grayish-blue);
+  font-size: 1.3rem;
+  line-height: 2rem;
+  letter-spacing: 0.12px;
+}
+
+.user__date {
+  color: var(--grayish-blue);
+}
+
+.icon__share {
+  background: var(--light-grayish-blue);
+  color: var(--desaturated-dark-blue);
+  padding: 1.2rem 1.5rem;
+  border-radius: 50%;
+  font-size: 1.5rem;
+  cursor: pointer;
+  transition: all 0.2s ease-in;
+}
+.icon__share:hover {
+  background: var(--desaturated-dark-blue);
+  color: #fff;
+}
+.icon__share:active {
+  transform: translateY(2px);
+}
+
+.tooltip {
+  position: absolute;
+  top: -75px;
+  right: -97px;
+  display: flex;
+  align-items: center;
+  background: var(--very-dark-grayish-blue);
+  padding: 1.5rem 3rem;
+  border-radius: 10px;
+  color: #fff;
+}
+.tooltip::after {
+  content: '';
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  width: 0;
+  height: 0;
+  border: 1.2rem solid transparent;
+  border-top-color: var(--very-dark-grayish-blue);
+  transform: translate(-50%, 0);
+}
+.tooltip__text {
+  letter-spacing: 5px;
+  color: var(--grayish-blue);
+  text-transform: uppercase;
+  margin-right: 2.1rem;
+}
+.tooltip__icon {
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+.tooltip__icon:not(.tooltip__icon:last-of-type) {
+  margin-right: 1.6rem;
 }
