Lighthouse and HTML validator

--- a/15-article-preview/style.css
+++ b/15-article-preview/style.css
@@ -176,6 +176,15 @@ img {
   margin-right: 2.1rem;
   margin-top: -0.5rem;
 }
+.tooltip__link {
+  color:#fff;
+  
+}
+
+.tooltip__link:not(.tooltip__link:last-of-type) {
+  margin-right: 1.6rem;
+}
+
 
 .tooltip__icon {
   font-size: 2rem;
@@ -185,9 +194,6 @@ img {
   position: relative;
 }
 
-.tooltip__icon:not(.tooltip__icon:last-of-type) {
-  margin-right: 1.6rem;
-}
 
 .fa-brands {
   transition: color 0.1s ease-in;
