--- a/15-article-preview/style.css
+++ b/15-article-preview/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap');
 :root {
   --very-dark-grayish-blue: hsl(217, 19%, 35%);
-  --desaturated-dark-blue: hsl(214, 17%, 51%);
+  --desaturated-dark-blue: hsl(214, 17%, 48%);
   --grayish-blue: hsl(212, 23%, 69%);
   --light-grayish-blue: hsl(210, 46%, 95%);
 }
@@ -101,7 +101,7 @@ img {
 }
 
 .user__date {
-  color: var(--grayish-blue);
+  color: var(--desaturated-dark-blue);
 }
 
 .icon__share {
