--- a/16-four-cards/style.css
+++ b/16-four-cards/style.css
@@ -31,3 +31,34 @@ body {
   line-height: 2.3rem;
   letter-spacing: 0.09px;
 }
+
+main {
+  padding: 8.5rem 3.2rem 7.8rem;
+}
+/* Hero */
+.hero {
+  text-align: center;
+
+}
+
+.hero__subheading {
+  font-size: 2.4rem;
+  letter-spacing: 0.17px;
+  font-weight: 200;
+
+}
+
+.hero__heading {
+  font-size:clamp(2.4rem, 1.5rem + 2vw , 3.6rem);
+  margin-bottom:1.3rem;
+  margin:1.2rem 0 1.3rem;
+}
+
+.hero__text {
+  font-size: 1.5rem;
+  width:70%;
+  margin-inline:auto;
+  font-weight: 400;
+  letter-spacing: 0.1px;
+  line-height: 2.4rem;
+}
