--- a/16-four-cards/style.css
+++ b/16-four-cards/style.css
@@ -38,27 +38,64 @@ main {
 /* Hero */
 .hero {
   text-align: center;
-
+  margin-bottom: 7.6rem;
 }
 
 .hero__subheading {
   font-size: 2.4rem;
   letter-spacing: 0.17px;
   font-weight: 200;
-
 }
 
 .hero__heading {
-  font-size:clamp(2.4rem, 1.5rem + 2vw , 3.6rem);
-  margin-bottom:1.3rem;
-  margin:1.2rem 0 1.3rem;
+  font-size: clamp(2.4rem, 1.5rem + 2vw, 3.6rem);
+  margin-bottom: 1.3rem;
+  margin: 1.2rem 0 1.6rem;
 }
 
 .hero__text {
   font-size: 1.5rem;
-  width:70%;
-  margin-inline:auto;
+  width: 75%;
+  margin-inline: auto;
   font-weight: 400;
   letter-spacing: 0.1px;
   line-height: 2.4rem;
+  color: hsl(229, 11%, 51%);
+}
+
+/* Cards */
+.card {
+  background: #fff;
+  width: 31.1rem;
+  padding: 2.7rem 2.8rem;
+  margin-inline: auto;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  margin-bottom: 2.3rem;
+}
+
+.card--cyan {
+  border-top: 4px solid var(--cyan);
+}
+.card--red {
+  border-top: 4px solid var(--red);
+}
+.card--orange {
+  border-top: 4px solid var(--orange);
+}
+.card--blue {
+  border-top: 4px solid var(--blue);
+}
+.card__heading {
+  font-size: 2rem;
+}
+.card__text {
+  color: var(--grayish-blue);
+  margin: 1rem 0 3.3rem;
+}
+.card__img {
+  align-self: flex-end;
 }
