--- a/15-article-preview/style.css
+++ b/15-article-preview/style.css
@@ -48,6 +48,9 @@ img {
 
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
+  object-fit: cover;
+  object-position: left;
+
 }
 
 .article__content {
