--- a/17-base-apparel/style.css
+++ b/17-base-apparel/style.css
@@ -27,3 +27,124 @@ body {
   font-size: 1.6rem;
   font-family: 'Josefin Sans', sans-serif;
 }
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.highlight {
+  color: var(--desaturated-red);
+  font-weight: 300;
+}
+
+/* Hero */
+.hero {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding-bottom: 5rem;
+}
+.hero__logo {
+  padding: 3.1rem 3.2rem 3.2rem;
+}
+
+.hero__heading {
+  font-size: clamp(4rem, 3rem + 2vw, 6.4rem);
+  text-transform: uppercase;
+  letter-spacing: 10.83px;
+  line-height: 4.2rem;
+  width: 60%;
+  margin-inline: auto;
+  margin-top: 6.4rem;
+}
+
+.hero__text {
+  font-size: 1.4rem;
+  line-height: 2.2rem;
+  color: var(--desaturated-red);
+  width: 65%;
+
+  margin: 1.6rem auto 3.2rem;
+}
+
+.hero__form {
+  position: relative;
+}
+
+/* Floating Label */
+
+/* test */
+
+.did-floating-label-content {
+  margin-bottom: 20px;
+  width: 500px;
+  margin-inline: auto;
+}
+
+.did-floating-label {
+  font-size: 1.4rem;
+  color: var(--desaturated-red);
+  position: absolute;
+  pointer-events: none;
+  left: 25px;
+  top: 14px;
+  right: 200px;
+  bottom: 150px;
+  padding: 0 5px;
+  background: #fff;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
+
+}
+
+.did-floating-input {
+  margin-inline: auto;
+  font-size: 12px;
+  display: block;
+  width: 300px;
+  height: 40px;
+  padding: 0 15px;
+  background: #fff;
+  color: #323840;
+  font-weight: 300;
+  border-radius: 25px;
+  color: var(--dark-grayish-red);
+  border: 1px solid var(--desaturated-red);
+}
+.did-floating-input:focus {
+  outline: none;
+}
+.did-floating-input:focus ~ .did-floating-label {
+  top: -20px;
+  font-size: 13px;
+  left: 3px;
+  color:black;
+}
+
+.did-floating-input:not(:placeholder-shown) ~ .did-floating-label {
+  top: -20px;
+  left: 3px;
+  font-size: 13px;
+  color:black;
+
+
+}
+
+.did-floating-label-content {
+  width: 350px;
+  position: relative;
+
+}
+.form__arrow {
+  background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+
+  padding: 1.1rem 2.1rem;
+  border-radius: 20px;
+  position: absolute;
+  top: 0;
+  right: 25px;
+  cursor: pointer;
+
+}
