--- a/17-base-apparel/style.css
+++ b/17-base-apparel/style.css
@@ -39,21 +39,31 @@ img {
 }
 
 /* Hero */
+picture img {
+  width: 100%;
+  margin-top: 10rem;
+}
 .hero {
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding-bottom: 5rem;
+
+  max-width: 600px;
+  margin-inline: auto;
+  position: relative;
 }
 .hero__logo {
-  padding: 3.1rem 3.2rem 3.2rem;
+  position: absolute;
+  top: 3rem;
+  left: 3rem;
+  width: 15rem;
 }
 
 .hero__heading {
   font-size: clamp(4rem, 3rem + 2vw, 6.4rem);
   text-transform: uppercase;
   letter-spacing: 10.83px;
-  line-height: 4.2rem;
+  line-height: 5rem;
   width: 60%;
   margin-inline: auto;
   margin-top: 6.4rem;
@@ -70,17 +80,17 @@ img {
 
 .hero__form {
   position: relative;
-  margin-top:1.5rem;
+  margin-top: 1.5rem;
 }
 
 /* Floating Label */
 
-/* test */
-
 .did-floating-label-content {
   margin-bottom: 20px;
-  width: 500px;
+
+  position: relative;
   margin-inline: auto;
+  width: 35rem;
 }
 
 .did-floating-label {
@@ -130,10 +140,6 @@ img {
   color: black;
 }
 
-.did-floating-label-content {
-  width: 350px;
-  position: relative;
-}
 .form__arrow {
   background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
   padding: 1.1rem 2.1rem;
@@ -160,4 +166,84 @@ img {
   top: 7px;
   right: 86px;
   visibility: hidden;
+}
+
+@media (min-width: 1100px) {
+  .hero {
+    max-width: 100vw;
+    display: flex;
+    flex-direction: row;
+
+    text-align: left;
+  }
+  /* .hero__logo {
+    position: absolute;
+    top:0;
+    left:208px;
+  } */
+  .hero__logo {
+    padding: 3.1rem 0 3.2rem;
+    width: 15.8rem;
+    position: relative;
+    top: 0;
+    left: 0;
+  }
+  picture {
+    order: 2;
+    width: 40%;
+
+    margin-left: auto;
+  }
+
+  .hero__img {
+    max-height: 80rem;
+    width: 60rem;
+    height: 80rem;
+    object-fit: cover;
+    width: 100%;
+    max-width: 60rem;
+    margin-left: auto;
+    height: 100vh;
+    margin-top: 0rem;
+  }
+  .hero__content {
+    order: 1;
+    margin-top: 5rem;
+    margin-left: 17rem;
+    width: 50%;
+    max-width: 500px;
+  }
+  .hero__heading {
+    line-height: 6.5rem;
+    width: 100%;
+    margin-top: 10rem;
+  }
+  .hero__text {
+    font-size: 1.6rem;
+    line-height: 2.8rem;
+    width: 90%;
+
+    margin-left: 0.2rem;
+  }
+
+  .hero__form {
+    margin-top: 5rem;
+  }
+  .did-floating-label-content {
+    margin-inline: 0;
+  }
+  .did-floating-label {
+    left: 10px;
+  }
+  .did-floating-input {
+    margin-inline: 0;
+    width: 36rem;
+  }
+  .form__arrow {
+    padding: 1.1rem 4.1rem;
+    right: -11px;
+  }
+  .error {
+    margin-left: 1rem;
+  }
 }
