--- a/17-base-apparel/style.css
+++ b/17-base-apparel/style.css
@@ -2,15 +2,11 @@
 
 :root {
   /* ## Primary ## */
-  --desaturated-red: hsl(0, 36%, 70%);
-  --soft-red: hsl(0, 93%, 68%);
+  --desaturated-red: #b15959;
+  --soft-red: #e70808;
 
   /* ## Neutral ## */
   --dark-grayish-red: hsl(0, 6%, 24%);
-
-  /* Gradients */
-  /* --linear, 135deg, from hsl(0, 0%, 100%), to hsl(0, 100%, 98%);
---linear, 135deg, from hsl(0, 80%, 86%), to hsl(0, 74%, 74%); */
 }
 * {
   padding: 0;
@@ -150,7 +146,7 @@ picture img {
   cursor: pointer;
 }
 
-.did-floating-input:invalid {
+.did-floating-input:focus:invalid {
   border: 2px solid var(--soft-red);
 }
 .error {
@@ -234,16 +230,24 @@ picture img {
   }
   .did-floating-label {
     left: 10px;
+    top:19px;
   }
   .did-floating-input {
     margin-inline: 0;
     width: 36rem;
+    height:5rem;
+    padding:1rem 1.6rem;
+    font-size: 1.6rem;
   }
   .form__arrow {
-    padding: 1.1rem 4.1rem;
+    padding: 1.5rem 3.5rem;
     right: -11px;
   }
   .error {
     margin-left: 1rem;
+  }
+  .error__icon {
+    top: 12px;
+    right: 80px;
   }
 }
