--- a/17-base-apparel/style.css
+++ b/17-base-apparel/style.css
@@ -43,7 +43,6 @@ picture img {
   display: flex;
   flex-direction: column;
   text-align: center;
-
   max-width: 600px;
   margin-inline: auto;
   position: relative;
@@ -56,7 +55,7 @@ picture img {
 }
 
 .hero__heading {
-  font-size: clamp(4rem, 3rem + 2vw, 6.4rem);
+  font-size: clamp(4rem, 3rem + 3vw, 6.4rem);
   text-transform: uppercase;
   letter-spacing: 10.83px;
   line-height: 5rem;
@@ -165,18 +164,17 @@ picture img {
 }
 
 @media (min-width: 1100px) {
+  body {
+    background: url('./images/bg-pattern-desktop.svg');
+    background-size: cover;
+  }
   .hero {
     max-width: 100vw;
     display: flex;
     flex-direction: row;
-
     text-align: left;
   }
-  /* .hero__logo {
-    position: absolute;
-    top:0;
-    left:208px;
-  } */
+
   .hero__logo {
     padding: 3.1rem 0 3.2rem;
     width: 15.8rem;
@@ -229,19 +227,19 @@ picture img {
     margin-inline: 0;
   }
   .did-floating-label {
-    left: 10px;
-    top:19px;
+    left: 20px;
+    top: 19px;
   }
   .did-floating-input {
     margin-inline: 0;
-    width: 36rem;
-    height:5rem;
-    padding:1rem 1.6rem;
+    width: 44rem;
+    height: 5rem;
+    padding: 1rem 1.6rem;
     font-size: 1.6rem;
   }
   .form__arrow {
-    padding: 1.5rem 3.5rem;
-    right: -11px;
+    padding: 1.5rem 4rem;
+    right: -91px;
   }
   .error {
     margin-left: 1rem;
