finish HTML structure and add bootstrap

--- a/18-sign-up-intro/style.css
+++ b/18-sign-up-intro/style.css
@@ -28,5 +28,6 @@ html {
 body {
   font-size: 1.6rem;
   font-family: 'Poppins', sans-serif;
-  background:url('./images/bg-intro-desktop.png')
+  background: var(--red) url('./images/bg-intro-desktop.png') no-repeat center center fixed;
+  background-size: cover;
 }
