--- a/18-sign-up-intro/style.css
+++ b/18-sign-up-intro/style.css
@@ -41,6 +41,7 @@ main {
 .hero__heading {
   font-size: clamp(2.8rem, 2rem + 2vw, 5rem);
   line-height: 3.6rem;
+  line-height: clamp(3.6rem, 2rem + 2vw, 5.5rem);
   letter-spacing: -0.29px;
   font-weight: 700;
   text-align: center;
@@ -54,6 +55,8 @@ main {
 }
 .hero__content {
   margin-bottom: 6.4rem;
+  max-width: 700px;
+  margin-inline: auto;
 }
 
 .hero__offer {
@@ -63,8 +66,9 @@ main {
   border-radius: 10px;
   margin-bottom: 2.4rem;
   line-height: 2.6rem;
-  max-width: 800px;
+  max-width: 700px;
   font-size: 1.5rem;
+  margin-inline: auto;
 }
 
 .highlight {
@@ -76,7 +80,9 @@ main {
   padding: 3.5rem 2.4rem 2.4rem;
   border-radius: 10px;
   color: var(--dark-blue);
-  box-shadow: 0 4px 4px rgba(0,0,0,0.25);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  max-width: 700px;
+  margin-inline: auto;
 }
 .form-floating > .form-control {
   height: calc(3.5rem + 10px);
@@ -136,4 +142,35 @@ main {
 .highlight--terms {
   color: var(--red);
   font-weight: bold;
+}
+
+/* Desktop */
+@media (min-width: 1200px) {
+  main {
+    padding: 0;
+  }
+  .hero {
+    display: flex;
+
+    min-height: 100vh;
+    justify-content: space-between;
+    align-items: center;
+
+    padding-right: 10rem;
+  }
+
+
+  .hero__heading {
+    width: 60%;
+    text-align: left;
+    margin-bottom:2rem;
+
+  }
+  .hero__text {
+    width: 60%;
+    margin-inline: auto;
+    text-align: left;
+    padding:0 3rem 0 0;
+  }
+
 }
