--- a/18-sign-up-intro/style.css
+++ b/18-sign-up-intro/style.css
@@ -3,7 +3,7 @@
 :root {
   /* ## Primary ## */
   --red: hsl(0, 100%, 74%);
-  --green: rgb(56, 204, 140);
+  --green: hsl(154, 59%, 51%);
 
   /* ## Accent  ## */
 
@@ -112,6 +112,12 @@ main {
   transform: scale(0.85) translateY(-4rem) translateX(-1.5rem);
   z-index: 1;
 }
+.error__icon {
+  position: absolute;
+  top:10px;
+  right:10px;
+  visibility: hidden;
+}
 
 .form__error {
   font-size: 1.1rem;
@@ -137,6 +143,10 @@ main {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   cursor: pointer;
   margin-bottom: 1.5rem;
+  transition: background 0.2s ease-in-out;
+}
+.form__button:hover {
+  background:hsl(154, 59%, 41%);
 }
 
 .form__terms {
@@ -159,11 +169,13 @@ main {
   }
   .hero {
     display: flex;
-
     min-height: 100vh;
     justify-content: space-between;
     align-items: center;
     padding-right: 10rem;
+  }
+  .hero__content {
+    margin-top:7rem;
   }
 
   .hero__heading {
